# raytracing

./: Bitmap.h.gch  CMakeLists.txt  a.out  main.cpp  vector.h
